# turtlebot3_autorace_2020

./: .travis.yml  README.md
.github/workflows/: build_test.yaml  ros-ci.yml
turtlebot3_autorace_2020/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_camera/: CMakeLists.txt  package.xml
turtlebot3_autorace_camera/calibration/extrinsic_calibration/: compensation.yaml  projection.yaml
turtlebot3_autorace_camera/calibration/intrinsic_calibration/: camerav2_320x240_30fps.yaml
turtlebot3_autorace_camera/cfg/: ImageProjectionParams.cfg
turtlebot3_autorace_camera/launch/: extrinsic_camera_calibration.launch  extrinsic_camera_calibration_0.launch  extrinsic_camera_calibration_1.launch  extrinsic_camera_calibration_multi.launch  intrinsic_camera_calibration.launch  intrinsic_camera_calibration_0.launch  intrinsic_camera_calibration_1.launch  intrinsic_camera_calibration_multi.launch  raspberry_pi_camera_publish.launch  turtlebot3_autorace_extrinsic_camera_calibration.launch  turtlebot3_autorace_intrinsic_camera_calibration.launch
turtlebot3_autorace_camera/nodes/: image_compensation  image_compensation_0  image_compensation_1  image_projection  image_projection_0  image_projection_1  image_publish  image_subscribe
turtlebot3_autorace_construction/: README.md
turtlebot3_autorace_construction/turtlebot3_autorace_construction/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_construction/turtlebot3_autorace_construction_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_construction/turtlebot3_autorace_construction_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_construction/turtlebot3_autorace_construction_core/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_construction/turtlebot3_autorace_construction_detect/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_core/: CMakeLists.txt  package.xml
turtlebot3_autorace_core/launch/: turtlebot3_autorace_core.launch  turtlebot3_autorace_mission.launch
turtlebot3_autorace_core/nodes/: construction_core_mode_decider  construction_core_node_controller  core_node_mission  intersection_core_mode_decider  intersection_core_node_controller  level_crossing_core_mode_decider  level_crossing_core_node_controller  parking_core_mode_decider  parking_core_node_controller  traffic_light_core_mode_decider  traffic_light_core_node_controller  tunnel_core_mode_decider  tunnel_core_node_controller
turtlebot3_autorace_detect/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_detect/cfg/: DetectLevelParams.cfg  DetectTrafficLightParams.cfg
turtlebot3_autorace_detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_lane_0.launch  detect_lane_1.launch  detect_lane_multi.launch  detect_level_crossing.launch  detect_parking.launch  detect_sign.launch  detect_traffic_light.launch  detect_tunnel.launch  turtlebot3_autorace_detect_construction.launch  turtlebot3_autorace_detect_construction_sign.launch  turtlebot3_autorace_detect_intersection_sign.launch  turtlebot3_autorace_detect_lane.launch  turtlebot3_autorace_detect_level_crossing.launch  turtlebot3_autorace_detect_level_sign.launch  turtlebot3_autorace_detect_parking.launch  turtlebot3_autorace_detect_parking_sign.launch  turtlebot3_autorace_detect_sign.launch  turtlebot3_autorace_detect_traffic_light.launch  turtlebot3_autorace_detect_tunnel_sign.launch
turtlebot3_autorace_detect/nodes/: detect_construction  detect_construction_sign  detect_intersection  detect_intersection_sign  detect_lane  detect_lane_0  detect_lane_1  detect_level  detect_level_crossing  detect_level_crossing_sign  detect_level_sign  detect_parking  detect_parking_sign  detect_traffic_light  detect_tunnel  detect_tunnel_sign
turtlebot3_autorace_detect/param/lane/: lane.yaml
turtlebot3_autorace_detect/param/level/: level.yaml
turtlebot3_autorace_detect/param/traffic_light/: traffic_light.yaml
turtlebot3_autorace_driving/: CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_driving/launch/: turtlebot3_autorace_control_intersection.launch  turtlebot3_autorace_control_lane.launch  turtlebot3_autorace_control_lane_0.launch  turtlebot3_autorace_control_lane_1.launch  turtlebot3_autorace_control_lane_2.launch  turtlebot3_autorace_control_lane_multi.launch  turtlebot3_autorace_control_moving.launch  turtlebot3_autorace_control_parking.launch  turtlebot3_autorace_control_tunnel.launch
turtlebot3_autorace_driving/maps/: tunnel.yaml
turtlebot3_autorace_driving/nodes/: control_intersection  control_lane  control_lane_0  control_lane_1  control_lane_2.py  control_moving  proba_copy_2  turtlebot3_teleop_key_2.py
turtlebot3_autorace_intersection/: README.md
turtlebot3_autorace_intersection/turtlebot3_autorace_intersection/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_intersection/turtlebot3_autorace_intersection_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_intersection/turtlebot3_autorace_intersection_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_intersection/turtlebot3_autorace_intersection_core/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_intersection/turtlebot3_autorace_intersection_detect/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_level_crossing/turtlebot3_autorace_level_crossing/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_level_crossing/turtlebot3_autorace_level_crossing_camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
turtlebot3_autorace_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_parking/: README.md
turtlebot3_autorace_stop_bar/: README.md
turtlebot3_autorace_traffic_light/: README.md
turtlebot3_autorace_traffic_light/turtlebot3_autorace_traffic_light/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_autorace_tunnel/: README.md
(+244 files in other folders)
