<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_autorace_traffic_light</name>
  <version>1.0.0</version>
  <description>
    AutoRace ROS packages for AutoRace with TurtleBot3 (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="ashekim@robotis.com">Ashe</author>
  <author>Ashe Kim</author>
  <maintainer email="ashekim@robotis.com">Ashe</maintainer>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_autorace</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_autorace_2020</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_autorace_2020/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_autorace_traffic_light_camera</exec_depend>
  <exec_depend>turtlebot3_autorace_traffic_light_control</exec_depend>
  <exec_depend>turtlebot3_autorace_traffic_light_core</exec_depend>
  <exec_depend>turtlebot3_autorace_traffic_light_detect</exec_depend>
  <export><metapackage/></export>
</package>
